--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
-    "firebase": "^7.24.0"
+    "firebase": "^7.24.0",
+    "node-cron": "^2.0.3"
   }
 }
